--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   position: absolute;
   margin-left: 100px;
   top: 30px;
-  width: 720px;
+  width: 580px;
   flex-wrap: wrap;
   display: flex;
   flex-direction: row;
@@ -179,6 +179,7 @@ input[type="checkbox"]::before {
 
 input[type="checkbox"]::after {
   content: "Off";
+  font-weight: bolder;
   position: absolute;
   color: #000000;
   font-size: 20px;
@@ -201,6 +202,18 @@ input[type="checkbox"]:checked::before {
 input[type="checkbox"]:checked::after {
   content: "On";
   color: #000000;
+}
+
+#input-checker-curtains:before {
+  content: "";
+}
+
+#input-checker-curtains::after {
+  content: "Close";
+}
+
+#input-checker-curtains:checked::after {
+  content: "Open";
 }
 
 #random-color {
