added all buttons and styles

--- a/style.css
+++ b/style.css
@@ -185,7 +185,6 @@ input[type="checkbox"]::after {
   top: 5px;
   left: 80px;
   bottom: -5px;
-  letter-spacing: 1px;
   transition: 0.3s;
 }
 
@@ -227,8 +226,14 @@ input[type="checkbox"]:checked::after {
   content: "Close";
 }
 
-#extra-garage-light {
+#extra-light-text {
+  font-size: 20px;
   margin-top: 80px;
+  font-weight: normal;
+}
+
+#extra-garage-light {
+  margin-top: 8px;
 }
 
 #extra-garage-light::before {
