--- a/style.css
+++ b/style.css
@@ -116,8 +116,6 @@ body {
 }
 
 #btn-kitchen p {
-  color: #444941;
-  font-weight: bold;
   font-size: 20px;
   text-align: center;
   justify-content: center;
@@ -276,4 +274,13 @@ input[type="checkbox"]:checked::after {
   background: #7fc8a9;
   color: #ffffff;
   cursor: pointer;
+}
+
+#range-wrapper {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+#range-btn {
 }
