added chanel counter

--- a/style.css
+++ b/style.css
@@ -258,6 +258,18 @@ input[type="checkbox"]:checked::after {
   content: "Off";
 }
 
+#input-checker-tv::before {
+  content: "";
+}
+
+#input-checker-tv::after {
+  content: "On";
+}
+
+#input-checker-tv:checked::after {
+  content: "Off";
+}
+
 #random-color {
   width: 120px;
   height: 50px;
@@ -292,4 +304,9 @@ input[type="checkbox"]:checked::after {
   margin-top: 100px;
   display: flex;
   justify-content: center;
+}
+
+#tv-option {
+  margin-top: 80px;
+  font-weight: normal;
 }
