--- a/style.css
+++ b/style.css
@@ -185,12 +185,12 @@ input[type="range"]::-webkit-slider-thumb {
   height: 15px;
   -webkit-appearance: none;
   margin-top: -4px;
-  box-shadow: -200px 0 0 200px #ff7171;
+  box-shadow: -200px 0 0 200px #f8485e;
 }
 
 input[type="range"]::-moz-range-track {
   height: 7px;
-  background-color: #ff7171;
+  background-color: #f8485e;
 }
 
 input[type="range"]::-moz-range-thumb {
