--- a/style.css
+++ b/style.css
@@ -428,10 +428,33 @@ audio {
 }
 
 .weather-wrapper {
-  width: 100px;
-  height: 100px;
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 180px;
+  height: 240px;
+  border-radius: 10px;
   background: #f8485e;
   position: absolute;
   margin-left: 1200px;
   top: 30px;
+}
+
+.weather-header {
+  font-size: 24px;
+  font-weight: bolder;
+  margin-bottom: 30px;
+}
+
+.weather-temperature {
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.discription {
+    
 }
