--- a/style.css
+++ b/style.css
@@ -434,27 +434,31 @@ audio {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  width: 180px;
-  height: 240px;
-  border-radius: 10px;
-  background: #f8485e;
+  width: 200px;
+  height: 250px;
+  border-radius: 20px;
+  background: #f7f6f2;
   position: absolute;
   margin-left: 1200px;
   top: 30px;
 }
 
 .weather-header {
+  color: #7868e6;
+  letter-spacing: 1px;
   font-size: 24px;
-  font-weight: bolder;
+  font-weight: 600;
   margin-bottom: 30px;
 }
 
 .weather-temperature {
-    font-size: 40px;
-    font-weight: bold;
-    margin-bottom: 30px;
+  font-size: 60px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  color: #7868e6;
 }
 
 .discription {
-    
+  color: #b8b5ff;
+  font-size: 18px;
 }
